--- a/csce242/index.html
+++ b/csce242/index.html
@@ -124,6 +124,13 @@
                                 <p>Incorporating feedback from instructors and classmates</p>
                             </div>
                         </a>
+                        <a href="projects/part6/index.html">
+                            <div class="assignment">
+                                <h3>JSON Parsing</h3>
+                                <img src="images/project6.png">
+                                <p>Modifying the project to load listed content from a JSON file</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
             </main>
