--- a/csce242/projects/part6/index.html
+++ b/csce242/projects/part6/index.html
@@ -30,7 +30,7 @@
                     <p>This website elects not to include already well documented monodihedral shapes, such as all platonic and catalan solids.</p>
                 </section>
                 <aside>
-                    <img src="json/images/Cube.jpg">
+                    <img src="https://jellylamps.github.io/csce242/projects/json/images/Cube.jpg">
                     <p class="faded">a cube, the most well known shape in this category</p>
                 </aside>
             </div>
@@ -41,7 +41,7 @@
                     <p>What led me down this rabbit hole initially was a desire to create novel designs for rubiks cube type puzzles. I noticed a common factor among puzzles I found to be interesting, mostly ones that could rearrange their pieces very well. Almost all the shapes used as a base for their mechanisms had only one dihedral angle. In my drive to make a unique design, I saw that every monodihedral shape I found documented already had a puzzle design. I thought certainly there must be many more, and I was right. I'm making a puzzle based on the first new shape I found, so there already is a practical application, more or less.</p>
                 </section>
                 <aside>
-                    <img src="json/images/Puzzle.jpg">
+                    <img src="https://jellylamps.github.io/csce242/projects/json/images/Puzzle.jpg">
                     <p class="faded">a design for a puzzle derived from the crimped tetrahedron</p>
                 </aside>
             </div>
