--- a/csce242/projects/part6/info.html
+++ b/csce242/projects/part6/info.html
@@ -21,7 +21,7 @@
         </nav>
         <main id="in-depth">
             <h1>Crimped Tetrahedron</h1>
-            <img class="spotlight" src="json/images/CTetra.jpg">
+            <img class="spotlight" src="https://jellylamps.github.io/csce242/projects/json/images/CTetra.jpg">
             <div class="text-block">
                 <h2>Data</h2>
                 <p class="dense">Dihedral Angle: 122.601252&#176</p>
