--- a/csce242/projects/part6/processes.html
+++ b/csce242/projects/part6/processes.html
@@ -27,11 +27,11 @@
                 <p>Crimping is a term I coined to describe the process of "pinching off" the corners of a polyhedron. Functionally, this can be described as cutting the corners with the surface of a pyramid with its edges directly between those of the corner. In most cases, these pyramids are based halfway along the edges belonging to the corner, with one exception (the <strong>alternating crimped cube</strong>) where it is instead based at the far ends of the edges.</p>
                 <section class="always columns">
                     <section>
-                        <img src="json/images/Tetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/Tetra.jpg">
                         <p class="faded">a tetrahedron</p>
                     </section>
                     <section>
-                        <img src="json/images/CTetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/CTetra.jpg">
                         <p class="faded">a crimped tetrahedron</p>
                     </section>
                 </section>
@@ -41,11 +41,11 @@
                 <p>This is nearly the same as crimping, but resulting in twice as many new "pinched" faces. Constructed by pyramids with base polygons that have twice as many sides as with crimping. This process shares the exact same quirks about where such pyramids are based.</p>
                 <section class="always columns">
                     <section>
-                        <img src="json/images/Tetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/Tetra.jpg">
                         <p class="faded">a tetrahedron</p>
                     </section>
                     <section>
-                        <img src="json/images/DCTetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/DCTetra.jpg">
                         <p class="faded">a double crimped tetrahedron</p>
                     </section>
                 </section>
@@ -55,11 +55,11 @@
                 <p>This process is not the same as the more documented geometric process that shares its name. It could be thought of as more generalized, with "true" stellation being a specific case. Concerning monodihedral polyhedra, stellation basically amounts to placing a pyramid onto a preexisting face of a polyhedron. If done to specific faces, this can result in a topology capable of being monodihedral.</p>
                 <section class="always columns">
                     <section>
-                        <img src="json/images/Cuboc.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/Cuboc.jpg">
                         <p class="faded">a cuboctahedron</p>
                     </section>
                     <section>
-                        <img src="json/images/FSCubocta.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/FSCubocta.jpg">
                         <p class="faded">a fully stellated cuboctahedron</p>
                     </section>
                 </section>
@@ -69,11 +69,11 @@
                 <p>Like stellation, this is a more general process than the preexisting one in geometry by the same name. In the context of monodihedral polyhedra, truncation is essentially "chopping off" specific corners of a polyhedron to create a new topology that can then be adjusted to be monodihedral.</p>
                 <section class="always columns">
                     <section>
-                        <img src="json/images/DCTetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/DCTetra.jpg">
                         <p class="faded">a double crimped tetrahedron</p>
                     </section>
                     <section>
-                        <img src="json/images/TDCTetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/TDCTetra.jpg">
                         <p class="faded">a truncated double crimped tetrahedron</p>
                     </section>
                 </section>
@@ -83,11 +83,11 @@
                 <p>This process, not discovered by me, involves "pulling out" the faces of a platonic solid and rotating them all by the same amount before connecting all the old and new vertices together. There are many versions of this operation, but one of them specifically creates monodihedral polyhedra. This class of solids is unique for being <strong>chiral</strong> (they essentially have a "handedness" as they don't have any mirror symmetry), a trait shared only by the pentagonal catalan solids among monodihedral polyhedra.</p>
                 <section class="always columns">
                     <section>
-                        <img src="json/images/Tetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/Tetra.jpg">
                         <p class="faded">a tetrahedron</p>
                     </section>
                     <section>
-                        <img src="json/images/PTetra.jpg">
+                        <img src="https://jellylamps.github.io/csce242/projects/json/images/PTetra.jpg">
                         <p class="faded">a "propello" tetrahedron</p>
                     </section>
                 </section>
