linked node hello world to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -12,7 +12,7 @@
                 <h2 id="name">Thomas Zwetsloot</h2>
 
                 <p>This class is part of the University of South Carolina's required CSCE curriculum. Its intent is to teach the skills required to create web applications/websites. Topics covered concerning front end development include HTML and CSS. Later, back end development is taught, first with basic JavaScript and then using Node to enable servers to run js code. There's some JSON thrown in there too, just for fun.</p>
-                <p><a href="https://github.com/Jellylamps/jellylamps.github.io/tree/main/csce242">Main GitHub Repo</a></p>
+                <p><a class="in-block" href="https://github.com/Jellylamps/jellylamps.github.io/tree/main/csce242">Main GitHub Repo</a></p>
             </header>
             
             <main id="core-main">
@@ -83,6 +83,14 @@
                                 <p>A demonstration of JS classes</p>
                             </div>
                         </a>
+                        <section class="standalone">
+                            <div class="assignment">
+                                <h3>Node Hello World</h3>
+                                <img src="images/node1.png">
+                                <p><a class="in-block" href="https://github.com/Jellylamps/server-helloworld">Code Repo</a></p>
+                                <p><a class="in-block" href="https://server-helloworld-sw0w.onrender.com/">Demo Site</a></p>
+                            </div>
+                        </section>
                     </ul>
                 </nav>
                 <h2 class="spacer">Projects</h2>
