--- a/csce242/index.html
+++ b/csce242/index.html
@@ -139,6 +139,13 @@
                                 <p>Modifying the project to load listed content from a JSON file</p>
                             </div>
                         </a>
+                        <a href="projects/part7/index.html">
+                            <div class="assignment">
+                                <h3>Contact Form & IFrame</h3>
+                                <img src="images/project7.png">
+                                <p>Adding functionality to submission form and adding 3D model embed</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
             </main>
