--- a/csce242/projects/part7/info.html
+++ b/csce242/projects/part7/info.html
@@ -21,8 +21,7 @@
         </nav>
         <main id="in-depth">
             <h1>Crimped Tetrahedron</h1>
-            <img class="spotlight" src="https://jellylamps.github.io/csce242/projects/json/images/CTetra.jpg">
-            <iframe id="vs_iframe" src="https://www.viewstl.com/?embedded" url="https://jellylamps.github.io/csce242/projects/json/3d/CrimpedTetrahedron.stl" style="border:0;margin:0;width:100%;height:100%;"></iframe>
+            <iframe width="400" height="400" src="https://3dviewer.net/embed.html#model=https://raw.githubusercontent.com/Jellylamps/jellylamps.github.io/main/csce242/projects/3d/CrimpedTetrahedron.stl$camera=55.18354,31.01423,48.93408,0.00000,0.00000,0.00000,0.00000,1.00000,0.00000,45.00000$projectionmode=perspective$envsettings=fishermans_bastion,off$backgroundcolor=255,255,255,0$defaultcolor=200,200,200$defaultlinecolor=100,100,100$edgesettings=on,0,0,0,2"></iframe>
             <div class="text-block">
                 <h2>Data</h2>
                 <p class="dense">Dihedral Angle: 122.601252&#176</p>
