minor adjustments to submission form

--- a/csce242/projects/part7/submission.html
+++ b/csce242/projects/part7/submission.html
@@ -30,7 +30,7 @@
                     <li>additional facts about one or a family of polyhedra</li>
                     <li>a correction to information on this site, like a polyhedron's traits or an incorrect credit</li>
                 </ul>
-                <form method="POST" id="contact-form">
+                <form method="POST" id="submission-form">
 
                     <input type="hidden" name="access_key" value="a044c59b-8358-4d1a-962a-fc7bf45077a5">
 
@@ -50,7 +50,7 @@
 
                     <button type="submit">Submit</button>
 
-                    <div id="contact-result"></div>
+                    <div id="submission-result"></div>
 
                 </form>
             </div>
