added project 8 to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -146,6 +146,14 @@
                                 <p>Adding functionality to submission form and adding 3D model embed</p>
                             </div>
                         </a>
+                        <section class="standalone">
+                            <div class="assignment">
+                                <h3>React Components & Pages</h3>
+                                <img src="images/project8.png">
+                                <p><a class="in-block" href="https://github.com/Jellylamps/monodihedrals">Code Repo</a></p>
+                                <p><a class="in-block" href="https://jellylamps.github.io/monodihedrals">React Site</a></p>
+                            </div>
+                        </section>
                     </ul>
                 </nav>
             </main>
