updated project links on home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -150,8 +150,10 @@
                             <div class="assignment">
                                 <h3>React Components & Pages</h3>
                                 <img src="images/project8.png">
-                                <p><a class="in-block" href="https://github.com/Jellylamps/monodihedrals">Code Repo</a></p>
-                                <p><a class="in-block" href="https://jellylamps.github.io/monodihedrals">React Site</a></p>
+                                <p><a class="in-block" href="https://github.com/Jellylamps/monodihedrals">Client Code Repo</a></p>
+                                <p><a class="in-block" href="https://jellylamps.github.io/monodihedrals">Client Site</a></p>
+                                <p><a class="in-block" href="https://github.com/Jellylamps/server-monodihedrals">Server Code Repo</a></p>
+                                <p><a class="in-block" href="https://server-monodihedrals.onrender.com/">Server Site</a></p>
                             </div>
                         </section>
                     </ul>
